Fix cropped-off logout button

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -295,6 +295,7 @@ nav img {
 }
 
 nav a.form-button.btn {
+  height: 50px;
   width: auto;
   background: none !important;
 }
